--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <TR valign=top>
 <TD class="menu" width=15% height=100% bgcolor="" style="background-color: white; position: fixed;">
-<a style="font-family: 'Montserrat Alternates', sans-serif; font-weight: 500; font-size: 20px; text-decoration: none; color: black; padding-bottom: 20px;" href="otz.html">Отзывы</a><br>
+<a style="font-family: 'Montserrat Alternates', sans-serif; font-weight: 500; font-size: 20px; text-decoration: none; color: black; padding-bottom: 20px;" href="Otz.html">Отзывы</a><br>
 <p></p>
 <a style="font-family: 'Montserrat Alternates', sans-serif; font-weight: 500; font-size: 20px; text-decoration: none; color: black; padding-bottom: 20px;" href="kontakt.html">Доставка и оплата</a><br>
 <p></p>
